# scrabbler-service

./: Dockerfile  README.md  pyproject.toml
scrabbler_service/: scrabble.py  scrabbler_service.py
tests/: test_scrabbler_service.py
