[tool.poetry]
name = "scrabbler-service"
version = "0.1.1"
description = "Simple HTTP service wrapper around http://github.com/mhozza/pyscrabbler."
authors = ["Michal Hozza <mhozza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrabbler = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
